# merchant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  models.py  routes.py
backend/app/core/: config.py  security.py
backend/app/services/: __init__.py  audio_guide_service.py
backend/data/: attractions.json  routes.json
backend/tests/: __init__.py  test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AttractionCard.tsx  AudioPlayer.tsx  BottomNavigation.tsx  CustomRoute.tsx  Map.tsx  Rewards.tsx  RouteSelection.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: telegram.ts
plans/: architecture-plan.md  implementation-plan.md  quick-reference.md
